@@ -120,6 +120,8 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/Channel.html#stop>Channel.stop</a> - stop playing on the channel<br>
 <a href=ref/Channel.html#unpause>Channel.unpause</a> - restart a paused channel<br>
 <a href=ref/Clock.html#get_fps>Clock.get_fps</a> - get the current rate of frames per second<br>
+<a href=ref/Clock.html#get_rawtime>Clock.get_rawtime</a> - get number of nondelayed milliseconds between last two calls to tick()<br>
+<a href=ref/Clock.html#get_time>Clock.get_time</a> - get number of milliseconds between last two calls to tick()<br>
 <a href=ref/Clock.html#tick>Clock.tick</a> - control timer events<br>
 <a href=ref/Font.html#get_ascent>Font.get_ascent</a> - gets the font ascent<br>
 <a href=ref/Font.html#get_bold>Font.get_bold</a> - status of the bold attribute<br>
